--- a/foodi-client/index.html
+++ b/foodi-client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"  />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' https://js.stripe.com; script-src 'self' 'unsafe-eval';">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://foodi-2.onrender.com; style-src 'self' https://fonts.googleapis.com;">
     <title>Foodi | Delicious Food for All</title>
   </head>
   <body>
